[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.6.1" # Cloudflare Workers Rust SDK
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
